--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: To-Him-That-Hath--A-Tale-of-the-West-of-Today_3244
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Connor, Ralph
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/1142
     wikipedia: http://en.wikipedia.org/wiki/Ralph_Connor
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/3244#To-Him-That-Hath--A-Tale-of-the-West-of-Today
 gutenberg_issued: '2006-06-03'
 gutenberg_type: Text
 identifiers:
